<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">极客地图</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    
    <string name="more">more</string>

</resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">极客新闻</string>
    <string name="text_size_smallest">最小</string>
    <string name="text_size_smaller">略小</string>
    <string name="text_size_normal">正常</string>
    <string name="text_size_larger">略大</string>
    <string name="text_size_largest">最大</string>
    <string name="dialog_share_title">分享到&#8230;</string>
    

</resources>
>>>>>>> 19015a267d4e02daf687cc5b6b3f15740cb149e1
